# rsty_physics

./: .gitignore  Dockerfile  Dockerfile.wasm  Dockerfile.windows  Makefile  README.md
.github/workflows/: main.yml
godot/: SineWave.gd  arc_tan.gd  arc_tan.tscn  bimotor.tscn  dot_product.gd  dot_product.tscn  export_presets.cfg  hypotenuse.gd  hypotenuse.tscn  icon.svg.import  main.gd  main.tscn  project.godot  rsty_physics.gdextension  sin_cos.tscn  sin_cos_anim.gd  sin_cos_curve_circle_anim.tscn  sin_cos_curve_ellipses_anim.gd  sin_cos_curve_ellipses_anim.tscn  sin_cos_curve_lissajous_curve.gd  sin_cos_curve_lissajous_curve.tscn  sin_wave.gd  velocity_particle.gd  velocity_particle.tscn
godot/assets/: arrow-png-images-3.png.import  bimotor.glb  bimotor.glb.import  icon.svg.import  sun.kra  sun.kra~  sun.png.import  sun.png~
godot/scenes/: World3D.tscn  arc_tan.gd  arc_tan.tscn  axis.tscn  bimotor.tscn  cross_product.gd  cross_product.tscn  cubelib.tres  dot_product.gd  dot_product.tscn  edge_particles.gd  edge_particles.tscn  gravity_particles.gd  gravity_particles.tscn  hypotenuse.gd  hypotenuse.tscn  icon.png.import  level.tscn  plane.gd  plane.tscn  sin_cos.tscn  sin_cos_anim.gd  sin_cos_curve_circle_anim.tscn  sin_cos_curve_ellipses_anim.gd  sin_cos_curve_ellipses_anim.tscn  sin_cos_curve_lissajous_curve.gd  sin_cos_curve_lissajous_curve.tscn  sin_wave.gd  velocity_particle.gd  velocity_particle.tscn
godot/scenes/fundamental_physics/: README.md
godot/scenes/fundamental_physics/ch1/: structure_of_mechanics.gd  structure_of_mechanics.tscn
godot/scenes/models/: cube.glb.import  cube_material.tres  mushroom.glb.import  white_cube_material.tres  white_wood.png.import
godot/scenes/player/: cubio.gd  cubio.tscn
godot/scripts/: RstyParticle2.gd  RstyVector2.gd
rsty_physics/: Cargo.toml  Cargo.toml.patch  Cross.toml  Makefile  Makefile.patch  macro_code.rs
rsty_physics/.cargo/: config
rsty_physics/src/: aligned_progress_bar.rs  core_utils.rs  health_body.rs  lib.rs  main_scene.rs  trig.rs
