[package]
name = "rsty_physics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 godot = { git = "https://github.com/thebigG/gdextension.git", branch = "138_ref_count_fixes"}
 #godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }
#godot = { path = "../../../godot", features = ["minimal"] }
#godot = { path = "../../projects/gdextension_array_debugging/gdextension/godot" }
